--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=3000
+
+MONGO_URL=mongodb+srv://bernst4315:BlkAngelfish25@cluster0.6rl8i.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
